--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
     <body>
         <h1>Odin Recipes</h1>
         <a href="./recipes/lasagna.html">World's Best Lasagna</a>
+        <a href="./recipes/burger.html">Good Burger</a>
+        <a href="./recipes/mashedpotatoes.html">Mashed Potatoes</a>
     </body>
 </html>
