Added an Ordered List to main page also Added Last recipe and missing pictures for those recipes.

--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/lasagna.html">World's Best Lasagna</a>
-        <a href="./recipes/burger.html">Good Burger</a>
-        <a href="./recipes/mashedpotatoes.html">Mashed Potatoes</a>
+        <ol>
+            <li><a href="./recipes/lasagna.html">World's Best Lasagna</a></li>
+            <li><a href="./recipes/burger.html">Good Burger</a></li>
+            <li><a href="./recipes/mashedpotatoes.html">Mashed Potatoes</a></li>
+
+        </ol>
     </body>
 </html>
