--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
     <head>
         <meta charset="utf-8">
         <title>Recipes</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>Odin Recipes</h1>
+        <h1>Blade's Recipes</h1>
         <ol>
-            <li><a href="./recipes/lasagna.html">World's Best Lasagna</a></li>
-            <li><a href="./recipes/burger.html">Good Burger</a></li>
-            <li><a href="./recipes/mashedpotatoes.html">Mashed Potatoes</a></li>
+            <button><a href="./recipes/lasagna.html"> World's Best Lasagna</a></button>
+            <button><a href="./recipes/burger.html">Good Burger</a></button>
+            <button><a href="./recipes/mashedpotatoes.html">Mashed Potatoes</a></button>
 
         </ol>
     </body>
