--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipes</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <h1>Worlds Best Lasagna</h1>
-    <img src="../images/lasagna.webp">
+    <img src="../images/lasagna.webp" width="300" height="300">
     <br>
     <h2>How to make a Lasagna</h2>
     <p>Making lasagna can be time-consuming, but the results are well worth the wait. You'll find a detailed ingredient list and step-by-step instructions in the recipe below, but let's go over the basics:</p>
