--- a/recipes/mashedpotatoes.html
+++ b/recipes/mashedpotatoes.html
@@ -3,11 +3,12 @@
     <head>
         <meta charset="utf-8">
         <title>Mashed Potatoes</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
     <body>
         <h1>Mashed Potatoes</h1>
         <p>This mashed potato recipe is perfect if you're looking for good, old-fashioned mashed potatoes. Made with Idaho potatoes, milk, butter, and optional garlic, this go-to recipe makes a classic holiday dish. Learn how to make mashed potatoes that come out smooth, creamy, and delicious every time. Serve with gravy or extra butter on top. </p>
-        <img src="../images/MashedPotatoes.jpg" alt="MashedPotatoes" width="500" height="500">
+        <img src="../images/MashedPotatoes.jpg" alt="MashedPotatoes" width="300" height="300">
         <br>
         <p>Ready to learn how to make the best mashed potatoes ever? You're in luck! This top-rated mashed potatoes recipe, made with just a few ingredients, produces crowd-pleasing results every time.</p>
         <br>
