--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             <button><a href="./recipes/lasagna.html"> World's Best Lasagna</a></button>
             <button><a href="./recipes/burger.html">Good Burger</a></button>
             <button><a href="./recipes/mashedpotatoes.html">Mashed Potatoes</a></button>
+            <button><a href="./recipes/bacon.html">BACON</a></button>
 
         </ol>
     </body>
